--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ published: true
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Welcome to yanys's Blog! <img src="pictures/女孩.png"> </h1>
-        <small style="color: #3eaf7c;">这里记录着我的技术学习之路</small>
+        <h1>Welcome to yanyl's Blog! <img src="pictures/女孩.png"> </h1>
+        <small style="color: #3eaf7c;">菜鸟的成长之路！</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
